# fastapi-design-pattern

./: .env.example  main.py  pyproject.toml
app/application/dto/: __init__.py  user_dto.py
app/application/use_cases/: user_use_cases.py
app/domain/entities/: user_entity.py
app/domain/exceptions/: __init__.py  user_exceptions.py
app/domain/respositories/: user_repositories.py
app/domain/services/: user_domain_service.py
app/infrastructure/config/: __init__.py  settings.py
app/infrastructure/db/: __init__.py  models.py  session.py
app/infrastructure/repositories_impl/: __init__.py  user_repository_impl.py
app/middleware/: error_handler.py
app/presentation/api/v1/: user_routes.py
